--- a/css/styles.css
+++ b/css/styles.css
@@ -3,7 +3,10 @@
 :root {
     --bg-gray: #ddd;
     --color-primary: #4D41C0;
-    --white: #FFFFFF
+    --white: #fff
+    --text-gray: #4a4a4a
+
+
 
 }
 
@@ -22,7 +25,7 @@ html, body{
 
 header {
     background-color: var(--color-primary);
-    color: var(--white);
+    color: #fff;
     height: 60px
     display: flex;
     align-items: center;
@@ -49,11 +52,55 @@ a, a:hover {
     color: unset;
 }
 
-. DSMovie-contact-container {
+.DSMovie-contact-container {
     display: flex;
     align-items: center;
  }
 
- . DSMovie-contact-container img{
+ .DSMovie-contact-container img{
     margin-right: 10px;
+}
+
+#dsmovie-card-list {
+    padding: 40px 0px;
+}
+
+
+.dsmovie-card {
+    width: 360px;
+    height: 400px;
+}
+
+.dsmovie-card img{
+    width: 100%;
+    height: 400px;
+    border-radius: 8px 8px 0 0;
+}
+
+.dsmovie-card-description {
+    background-color: #fff;
+    padding: 10px 0 20px 0;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    border-radius: 0 0 8px 8px;
+}
+
+.dsmovie-card-description h3{
+    margin-bottom: 25px;
+    font-size: 14px;
+    font-weight: 700;
+}
+
+.dsmovie-btn, dsmovie-btn:hover {
+    width: 180px;
+    height: 40px;
+    background-color: var(--color-primary);
+    color: #fff;
+    font-size: 14px;
+    font-weight: 700px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border-radius: 4px;
 }
