--- a/css/styles.css
+++ b/css/styles.css
@@ -67,8 +67,8 @@ a, a:hover {
 
 
 .dsmovie-card {
-    width: 360px;
-    height: 400px;
+    width: 100%;
+    height: 100%;
 }
 
 .dsmovie-card img{
@@ -79,11 +79,13 @@ a, a:hover {
 
 .dsmovie-card-description {
     background-color: #fff;
-    padding: 10px 0 20px 0;
+    padding: 10px 20px 20px 20px;
     display: flex;
     flex-direction: column;
     align-items: center;
+    justify-content: space-between;
     border-radius: 0 0 8px 8px;
+    min-height: 150px;
 }
 
 .dsmovie-card-description h3{
