--- a/css/styles.css
+++ b/css/styles.css
@@ -6,6 +6,7 @@
     --white: #fff
     --text-gray: #4a4a4a
     --text-light-gray: #aaa
+    --star-yellow: #ffbb3a
 
 
 
@@ -87,12 +88,39 @@ a, a:hover {
     justify-content: space-between;
     border-radius: 0 0 8px 8px;
     min-height: 150px;
+    height: 220px;
 }
 
 .dsmovie-card-description h3{
     margin-bottom: 25px;
     font-size: 14px;
     font-weight: 700;
+    text-align: center;
+}
+
+.dsmovie-card-description-bottom{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.dsmovie-card-description-bottom h4{
+    color: #ffbb3a;
+    font-size: 16px;
+    font-weight: 700;
+}
+
+.dsmovie-card-description-bottom p{
+    font-size: 12px;
+    font-weight: 400;
+    color: #aaa;
+    margin-bottom: 10px;
+
+
+}
+
+.dsmovie-card-description-bottom img{
+    width: 22px;
 }
 
 .dsmovie-btn, .dsmovie-btn:hover {
