--- a/css/styles.css
+++ b/css/styles.css
@@ -64,7 +64,7 @@ a, a:hover {
 }
 
 #dsmovie-card-list {
-    padding: 40px 10px;
+    padding: 0px 10px;
 }
 
 
@@ -175,4 +175,206 @@ a, a:hover {
     flex-direction: column;
     align-items: center;
     justify-content: space-between;
+}
+
+.dsmovie-pagination-container{
+    padding: 15px 0;
+    display: flex;
+    justify-content: center;
+}
+
+.dsmovie-pagination-box{
+    width: 180px;
+    display: flex;
+    justify-content: space-between;
+}
+
+.dsmovie-pagination-box p {
+    margin: 0;
+    font-size: 16px;
+    color: #4D41C0;
+    font-weight: 700px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.dsmovie-pagination-box button {
+    width: 40px;
+    height: 40px;
+    border: 1px solid var(--color-primary);
+    border-radius: 4px;
+    background-color: #fff;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.dsmovie-pagination-box button img{
+    filter: brightness(0) saturate(100%) invert(21%) sepia(82%) saturate(1990%) hue-rotate(234deg) brightness(97%) contrast(89%);
+}
+
+.dsmovie-pagination-box button:disabled {
+    border: 1px solid #aaa;
+}
+
+.dsmovie-pagination-box button:disabled img {
+    filter: unset;
+}
+
+.dsmovie-flip-horizontal {
+    transform: rotate(180deg);
+}
+
+.dsmovie-card-2 {
+    width: 100%;
+    height: 100%;
+}
+
+.dsmovie-card-2 img{
+    width: 100%;
+    border-radius: 8px 8px 0 0;
+}
+
+.dsmovie-card-description-2 {
+    background-color: #fff;
+    padding: 10px 20px 20px 20px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-between;
+    border-radius: 0 0 8px 8px;
+    min-height: 150px;
+    height: 190px;
+}
+
+.dsmovie-card-description-2 h3{
+    margin-bottom: 10px;
+    font-size: 14px;
+    font-weight: 700;
+    text-align: center;
+}
+
+.dsmovie-card-description-bottom-2 {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.dsmovie-card-description-bottom-2 h4{
+    color: #ffbb3a;
+    font-size: 16px;
+    font-weight: 700;
+}
+
+.dsmovie-card-description-bottom-2 p{
+    font-size: 12px;
+    font-weight: 400;
+    color: #aaa;
+    margin-bottom: 10px;
+
+
+}
+
+.dsmovie-card-description-bottom-2 img{
+    width: 22px;
+}
+
+.dsmovie-btn, .dsmovie-btn:hover {
+    width: 180px;
+    height: 40px;
+    background-color: var(--color-primary);
+    color: #fff;
+    font-size: 14px;
+    font-weight: 700px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border-radius: 4px;
+    border: 0;
+}
+
+.dsmovie-form-container{
+    padding: 40px 0;    
+    max-width: 480px;
+}
+
+.dsmovie-form-description {
+    background-color: #fff;
+    padding: 20px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    border-radius: 0 0 8px 8px;
+    
+}
+
+.dsmovie-form{
+    width: 100%;
+}
+
+.dsmovie-form-description h3{
+    font-size: 13px;
+    font-weight: 700;
+    margin-bottom: 20px;
+}
+
+.dsmovie-form-group{
+    margin-bottom: 20px;
+    color: #aaa;
+    font-size: 12px;
+}
+
+.dsmovie-card-3 {
+    width: 100%;
+    height: 100%;
+}
+
+.dsmovie-card-3 img{
+    width: 100%;
+    border-radius: 8px 8px 0 0;
+}
+
+.dsmovie-card-description-3 {
+    background-color: #fff;
+    padding: 10px 20px 20px 20px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-between;
+    border-radius: 0 0 8px 8px;
+    min-height: 150px;
+    height: 190px;
+}
+
+.dsmovie-card-description-3 h3{
+    margin-bottom: 10px;
+    font-size: 14px;
+    font-weight: 700;
+    text-align: center;
+}
+
+.dsmovie-card-description-bottom-3 {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.dsmovie-card-description-bottom-3 h4{
+    color: #ffbb3a;
+    font-size: 16px;
+    font-weight: 700;
+}
+
+.dsmovie-card-description-bottom-3 p{
+    font-size: 12px;
+    font-weight: 400;
+    color: #aaa;
+    margin-bottom: 10px;
+
+
+}
+
+.dsmovie-card-description-bottom-3 img{
+    width: 22px;
 }
